# coloration

./: .editorconfig  .gitignore  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  coloration.sublime-project  requirements-dev.txt  setup.cfg  setup.py
coloration/: __init__.py  __meta__.py  _init.py  _stream.py  _utils.py
coloration/_ansi/: __init__.py  _codes.py  _codes_flat.py  _constants.py  _utils.py
coloration/_highlighting/: __init__.py  _default.py  _highlighter.py  _regex.py  _repl.py  _span.py  _utils.py
coloration/logging/: __init__.py  _formatter.py  _handler.py  _logging.py
demos/: _bootstrap.py  codenames.py  colors8.py  hello.py  highlight.py  log.py
scripts/: codequal.py
tests/: _common.py  test_ansi.py  test_highlighting.py
