[metadata]
name = coloration
version = attr: coloration.__version__
license = MIT
license_files = LICENSE.txt
description = Python library for terminal and logs coloring and styling
url = https://github.com/polyvertex/coloration
project_urls =
    Source Code = https://github.com/polyvertex/coloration
    Issue Tracker = https://github.com/polyvertex/coloration/issues
keywords = terminal, coloring, styling, logging
author = Jean-Charles Lefebvre
author_email = polyvertex@gmail.com
# long_description = file: README.rst
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = coloration
include_package_data = True
zip_safe = True
python_requires = >= 3.8
install_requires = file: requirements.txt
tests_require =

# [options.entry_points]
# console_scripts =
#     coloration = coloration.cmd:main

[options.extras_require]
dev = file: requirements-dev.txt

# [sdist]
# this causes checm_manifest troubles due to having more than one file in dist/
# formats = gztar, zip


[flake8]
# flake8 options
require-plugins =
    pycodestyle
    pyflakes
    mccabe
    flake8-bugbear
    flake8-noqa
    # flake8-import-order
    dlint
select =
    # C901: mccabe
    # B: flake8-bugbear
    # D: dlint
    # E: pycodestyle
    # F: flake8
    # I: flake8-import-order
    # NQA: flake8-noqa
    # W: pycodestyle
    # default: E,F,W,C90
    E,F,W,C90,B,D,I,NQA
max-line-length = 88
max-doc-length = 88
statistics = True
extend-exclude = tmp/
ignore =
    # I101 Imported names are in the wrong order
    # W504 line break after binary operator
    I101,W504
per-file-ignores =
    # F401 Module imported but unused
    # F403 'from module import *' used; unable to detect undefined names
    coloration/__init__.py: I,F401,F403
    coloration/_ansi/__init__.py: I,F401,F403
    coloration/_highlighting/__init__.py: I,F401
    coloration/logging/__init__.py: I,F401,F403

# flake8-noqa options
noqa-require-code = True
noqa-include-name = True

# mccabe options
max-complexity = 25


[pylint.]
persistent = False
score = False
expected-line-ending-format = LF
# line length checked by flake8 already
# max-line-length = 88
good-names = _
disable =
    # C0103: Variable name "XX" doesn't conform to snake_case naming style (invalid-name)
    # C0114: Missing module docstring (missing-module-docstring)
    # C0115: Missing class docstring (missing-class-docstring)
    # C0116: Missing function or method docstring (missing-function-docstring)
    # C0209: Formatting a regular string which could be a f-string (consider-using-f-string)
    # C0301: Line too long (XX/YY) (line-too-long)
    # C0415: Import outside toplevel (XX) (import-outside-toplevel)
    # E0611: No name 'XX' in module 'YY' (no-name-in-module)
    # E1101: Module 'XX' has no 'YY' member (no-member)
    # R0401: Cyclic import (XX -> YY) (cyclic-import)
    # R0901: Too many ancestors (XX/YY) (too-many-ancestors)
    # R0902: Too many instance attributes (XX/YY) (too-many-instance-attributes)
    # R0903: Too few public methods (XX/YY) (too-few-public-methods)
    # R0904: Too many public methods (XX/YY) (too-many-public-methods)
    # R0912: Too many branches (XX/YY) (too-many-branches)
    # R0914: Too many local variables (XX/YY) (too-many-locals)
    # R0915: Too many statements (XX/YY) (too-many-statements)
    # R1702: Too many nested blocks (XX/YY) (too-many-nested-blocks)
    # R1705: Unnecessary "elif" after "return", remove the leading "el" from "elif" (no-else-return)
    # R1720: Unnecessary "elif" after "raise", remove the leading "el" from "elif" (no-else-raise)
    # W0246: Useless parent or super() delegation in method '__init__' (useless-parent-delegation)
    # W0707: Consider explicitly re-raising using 'except XxxError as exc' and 'raise YyyError('xxx') from exc' (raise-missing-from)
    C0103,C0114,C0115,C0116,C0209,C0301,C0415,
    E0611,E1101,
    R0401,R0901,R0902,R0903,R0904,R0912,R0914,R0915,R1702,R1705,R1720,
    W0246,W0707
